# rvalgorithm

./: CMakeLists.txt  Makefile  README.md
include/rvalgorithm/: algorithm.h  end.h  find.h  foreach.h  rvalgorithm.h
src/: algorithm.c  end.c  find.c  foreach.c  main.c  rvalgorithm.c
test/: CMakeLists.txt  end_test.cpp  find_test.cpp  foreach_test.cpp  rvalgorithm_test.cpp
